Made things cleaner so that we don't always have to check if the input target is a URL or file on the VTool class end. Files will automatically be converted into URL on the FileListGenerator class side.